# pulsePhase

./: .cvsignore  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  pulsePhaseLib.py
cmt/: requirements
data/: D1.fits  master_pulsardb.fits  my_pulsar_events_2gti.fits  testevdata_1day_2gti.fits  testpsrdb_ephcomp.fits
data/outref/: testOrbitalPhaseApp_par1.fits  testOrbitalPhaseApp_par1a.fits  testPulsePhaseApp_par1a.fits  testPulsePhaseApp_par1b.fits  testPulsePhaseApp_par1c.fits  testPulsePhaseApp_par2.fits  testPulsePhaseApp_par3.fits  testPulsePhaseApp_par3a.fits  testPulsePhaseApp_par3b.fits  testPulsePhaseApp_par3c.fits  testPulsePhaseApp_par4.fits
doc/: release.notes
pfiles/: gtophase.par  gtpphase.par  pulsePhase.par
pulsePhase/: TimingModel.h
src/: OrbitalPhaseApp.cxx  OrbitalPhaseApp.h  PulsePhaseApp.cxx  PulsePhaseApp.h  TimingModel.cxx  TimingModel.h  mainpage.h
src/gtophase/: gtophase.cxx
src/gtpphase/: gtpphase.cxx
src/pulsePhase/: .pulsePhase.cxx.swp  pulsePhase.cxx
src/test/: test_pulsePhase.cxx
